# java-coursework

./: .gitignore  Makefile  nutrition_tracker.db  output.json  pyproject.toml
backend/: .gitignore  Makefile  pyproject.toml
backend/docker/: dev.Dockerfile  prod.Dockerfile
backend/env/: .env.template
backend/logging/configuration/: prod.json
backend/logging/logs/: log.jsonl
backend/src/api/: __main__.py  api.py
backend/src/api/lib/: consts.py  dependencies.py  schemas.py
backend/src/api/routers/: __init__.py
backend/src/api/routers/meta/: endpoints.py  schemas.py
backend/src/api/routers/user/: endpoints.py  schemas.py
backend/src/api/routers/user/subrouters/: __init__.py
backend/src/api/routers/user/subrouters/food_entry/: endpoints.py  schemas.py  utils.py
backend/src/configuration/: __init__.py  configuration.py
backend/src/configuration/lib/: __init__.py  consts.py  utils.py
backend/src/database/: __init__.py  base.py  begun_session.py  database.py  pyproject.toml  schema.py
backend/src/database/lib/: consts.py  schemas.py
backend/src/database/scripts/: get_graph_data.py
backend/src/database/tables/: __init__.py  food.py  user.py
backend/src/database/tables/lib/: __init__.py  database_table.py  utils.py
backend/src/food/: nutrition_query.py
backend/src/lib/: __init__.py  utils.py
backend/src/lib/models/: __init__.py  food.py  user.py
backend/src/lib/models/lib/: consts.py  data_model.py
backend/src/tests/: test_api.py  test_queries.py
backend/src/tests/test_data/: README.md  generator.py  test_db.py
backend/src/user/: queries.py
database/: db.py  nutrition_query.py  pyproject.toml  queries.py  schema.py
database/scripts/: get_graph_data.py  populate_test_db.py
database/tests/: conftest.py  test_nutrition_data.py  test_queries.py
database/tests/test_data/: README.md  all_users_nutrition_data.json  generate_test_data.py  generator.py  user_1_nutrition_data.json  user_2_nutrition_data.json  user_3_nutrition_data.json
(+26 files in other folders)
