[tool.poetry]
name = "coursework-name"
version = "0.1.0"
description = ""
authors = [
    "Kieran Lock <kl935@bath.ac.uk>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
uvicorn = "^0.31.1"
orjson = "^3.10.7"
httpx = "^0.28.0"
itsdangerous = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
