[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["Noah Hayes <nh869@bath.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "."},
]

[tool.poetry.dependencies]
python = ">=3.13"
sqlalchemy = ">=2.0.39,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-sqlalchemy = "^0.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
