[project]
name = "database"
version = "0.1.0"
description = ""
authors = [
    {name = "Noah Hayes",email = "nh869@bath.ac.uk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.39,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-sqlalchemy = "^0.2.1"
mypy = "^1.15.0"

[tool.mypy]
python_version = "^3.13"
strict = true
disallow_untyped_defs = true
