[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
packages = [
    { include = "."},
]

[tool.poetry.dependencies]
python = ">=3.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
